Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3041,6 +3041,7 @@ input, select, textarea {
 
 		.work-item .image {
 			max-width: 300px; /* Set a maximum width */
+			max-height: 250px;
 		}
 
 		.work-item .image img {
